// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createIamServiceAccountAssignedIamRoleRelationship should convert to relationship using service account 1`] = `
Object {
  "_class": "ASSIGNED",
  "_fromEntityKey": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "_key": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com|assigned|projects/j1-gc-integration-dev-v2/roles/myrole",
  "_toEntityKey": "projects/j1-gc-integration-dev-v2/roles/myrole",
  "_type": "google_iam_service_account_assigned_role",
  "displayName": "ASSIGNED",
  "projectId": "j1-gc-integration-dev-v2",
}
`;

exports[`#createIamServiceAccountAssignedIamRoleRelationship should convert to relationship with conditions in role 1`] = `
Object {
  "_class": "ASSIGNED",
  "_fromEntityKey": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "_key": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com|assigned|projects/j1-gc-integration-dev-v2/roles/myrole",
  "_toEntityKey": "projects/j1-gc-integration-dev-v2/roles/myrole",
  "_type": "google_iam_service_account_assigned_role",
  "conditionDescription": "Test description",
  "conditionExpression": "resource.name != \\"bogusunknownresourcename\\"",
  "conditionLocation": undefined,
  "conditionTitle": "Test title",
  "displayName": "ASSIGNED",
  "projectId": "j1-gc-integration-dev-v2",
}
`;

exports[`#createOrganizationEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Organization",
  ],
  "_key": "organizations/958457776463",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTime": "2021-05-26T21:15:56.407Z",
        "displayName": "jupiterone.dev",
        "lifecycleState": "ACTIVE",
        "name": "organizations/958457776463",
        "owner": Object {
          "directoryCustomerId": "C048tgq5f",
        },
      },
    },
  ],
  "_type": "google_cloud_organization",
  "createdOn": 1622063756407,
  "displayName": "organizations/958457776463",
  "lifecycleState": "ACTIVE",
  "name": "organizations/958457776463",
}
`;
